syntax = "proto3";
import "google/protobuf/empty.proto";
package userProto;
option go_package = ".;userProto";

service UserService {
  rpc CheckMobile(CheckMobileRequest) returns (CheckMobileResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc LoginBySMS(LoginBySMSRequest) returns (LoginResponse) {}
  rpc LoginByPassword(LoginByPasswordRequest) returns (LoginResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty) {}
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {}

  rpc GetAllCompany(google.protobuf.Empty) returns (GetAllCompanyResponse) {}
}

message CheckMobileRequest {
  string mobile = 1;
}

message CheckMobileResponse {
  bool exist = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string mobile = 3;
  int64 company = 4;
}

message RegisterResponse {
  int64 id = 1;
  int64 company = 3;
}

message LoginBySMSRequest{
  string mobile = 1;
}

message LoginByPasswordRequest{
  string mobile = 1;
  string password = 2;
}

message LoginResponse{
  int64 id = 1;
  int64 company = 2;
}

message GetUserRequest{
  int64 id = 1;
}

message GetUserResponse{
  int64 id = 1;
  string username = 2;
  string mobile = 3;
  int64 company = 4;
  string avatar = 5;
}

message ResetPasswordRequest{
  string mobile = 1;
  string password = 2;
}

message UpdateUserRequest{
  int64 id = 1;
  string username = 2;
  string avatar = 3;
}

message Company{
  int64 id = 1;
  string name = 2;
}

message GetAllCompanyResponse{
  repeated Company companies = 1;
}